# raytracing-one-weekend

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
src/: common-model.cpp  common-model.h  main.cpp  model.cpp  model.h  oo-primitives.h  oomodel.cpp  oomodel.h  primitive-model.h  random-utils.cpp  random-utils.h  random_utils.cpp  render.cpp  render.h  rtweekend.cpp  utils.h  variant-primitives.h  vec3.h  vmodel.h
tools/: build-debug  build-release  watch
